# serializer version: 1
# name: test_update[1_101n-after-1-minute]
  '3.0'
# ---
# name: test_update[1_101n-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    'device_class': 'duration',
    'friendly_name': '1: 101N',
    'headsign': '',
    'icon': 'mdi:bus-clock',
    'latitude': 45.0,
    'location_source': <LocationSource.VEHICLE_POSITION_MESSAGE: 'vehicle_position_message'>,
    'longitude': -75.0,
    'route_color': '',
    'route_id': 'A',
    'route_text_color': '',
    'route_type': '',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'A1',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[1_102s-after-1-minute]
  '8.0'
# ---
# name: test_update[1_102s-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    'device_class': 'duration',
    'friendly_name': '1: 102S',
    'headsign': '',
    'icon': 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'X',
    'route_text_color': '',
    'route_type': '',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'X1',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[2_101n-after-1-minute]
  '5.0'
# ---
# name: test_update[2_101n-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    'device_class': 'duration',
    'friendly_name': '2: 101N',
    'headsign': '',
    'icon': 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'B',
    'route_text_color': '',
    'route_type': '',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'B1',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[2_102s-after-1-minute]
  '12.0'
# ---
# name: test_update[2_102s-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    'device_class': 'duration',
    'friendly_name': '2: 102S',
    'headsign': '',
    'icon': 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'Y',
    'route_text_color': '',
    'route_type': '',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'Y1',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[3_101n-after-1-minute]
  '7.0'
# ---
# name: test_update[3_101n-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    'device_class': 'duration',
    'friendly_name': '3: 101N',
    'headsign': 'Downtown',
    'icon': 'mdi:bus-clock',
    'route_color': 'FFFFFF',
    'route_id': '123',
    'route_text_color': '888888',
    'route_type': 'Subway',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': '123-test',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[3_102s-after-1-minute]
  '16.0'
# ---
# name: test_update[3_102s-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    'device_class': 'duration',
    'friendly_name': '3: 102S',
    'headsign': '',
    'icon': 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'Z',
    'route_text_color': '',
    'route_type': '',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'Z1',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[4_101n-after-1-minute]
  'unknown'
# ---
# name: test_update[4_101n-attributes-after-1-minute]
  dict({
    'device_class': 'duration',
    'friendly_name': '4: 101N',
    'icon': 'mdi:bus-clock',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[4_102s-after-1-minute]
  'unknown'
# ---
# name: test_update[4_102s-attributes-after-1-minute]
  dict({
    'device_class': 'duration',
    'friendly_name': '4: 102S',
    'icon': 'mdi:bus-clock',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
